feat: close inheritor backend phase1